SF Primes/src/objects/NADA_Match__c.object
<CustomObject>
    <description>Tradeshow matching temporary object</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NADA Matches</relationshipLabel>
        <relationshipName>NADA_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Attendee</label>
        <referenceTo>NADA_Attendees__c</referenceTo>
        <relationshipLabel>NADA Matches</relationshipLabel>
        <relationshipName>NADA_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>NADA Matches</relationshipLabel>
        <relationshipName>NADA_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NADA_Swipe__c</fullName>
        <label>NADA Swipe</label>
        <referenceTo>NADA_Swipe__c</referenceTo>
        <relationshipLabel>NADA Matches</relationshipLabel>
        <relationshipName>NADA_Matches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NADA Matches</relationshipLabel>
        <relationshipName>NADA_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NADA Match</label>
    <nameField>
        <displayFormat>NM-{0}</displayFormat>
        <label>NADA Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NADA Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>